[project]
name = "jp_util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OliverWong", email = "hopensic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"




