[project]
name = "jp_util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OliverWong", email = "hopensic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true




